<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_header_reply"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="176dp"
        android:text="@string/text_header_reply"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/text_message_reply"
        android:layout_width="321dp"
        android:layout_height="40dp"
        android:layout_below="@+id/text_header_reply"
        android:layout_marginTop="0dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="launchSecondActivity"
        android:text="@string/button_main"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText_main"
        android:layout_width="286dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@+id/button_main"
        android:layout_toLeftOf="@+id/button_main"
        android:ems="10"
        android:hint="@string/editText_main"
        android:inputType="text" />


</RelativeLayout>